--- a/_notebooks/2023-08-17-Markdown_Table_Code_Hack.ipynb
+++ b/_notebooks/2023-08-17-Markdown_Table_Code_Hack.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "## Learning College Board Pseudo Code\n",
     "> College Board uses a kind-of programming language in its Multiple Choice exam. There are thousands of different programming languages have been created, and more are being created every year.  College Board has designed a pseudo code, a non operational programming language, to highlight concepts that it wants every student to learn.\n",
-    "hello\n",
+    "hello What\n",
+    "\n",
     "College Board is trying to remain neutral and build Computer Science Principles off of any language, thus the Teacher is left to pick the language(s) according to application and curriculum. \n",
     "\n",
     "College Board Pseudo Code [Exam Reference Sheet](https://apcentral.collegeboard.org/media/pdf/ap-computer-science-principles-exam-reference-sheet.pdf)\n"
