--- a/_notebooks/2023-10-10-doesthiswork.ipynb
+++ b/_notebooks/2023-10-10-doesthiswork.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "does this work idk"
+    "does this work idk\n",
+    "what is going on."
    ]
   }
  ],
