--- a/_notebooks/2023-10-12-passionproj-input-data.ipynb
+++ b/_notebooks/2023-10-12-passionproj-input-data.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Passion Project\n",
-    "description: The branches of our passion project\n",
+    "title: Data Input\n",
+    "description: Fill out the survey to be included in the data\n",
     "courses: { compsci: {week: 8} }\n",
     "type: tangibles\n",
-    "permalink: /passionproject/home\n",
+    "permalink: /passionproject/input-data\n",
     "comments: true\n",
     "---"
    ]
