--- a/_notebooks/2023-10-12-passionproject-graphs.ipynb
+++ b/_notebooks/2023-10-12-passionproject-graphs.ipynb
@@ -14,6 +14,13 @@
     "comments: true\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% include passionproj.html %}"
+   ]
   }
  ],
  "metadata": {
