--- a/_notebooks/2023-10-12-passionproj-input-data.ipynb
+++ b/_notebooks/2023-10-12-passionproj-input-data.ipynb
@@ -16,27 +16,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "{% include passionproj.html %}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "html"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (211036508.py, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 19\u001b[0;36m\u001b[0m\n\u001b[0;31m    border-radius: 10px;\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
     "<!-- put your HTML code in this cell, Make sure to press the Run button to see your results below -->\n",
     "\n",
@@ -53,10 +56,8 @@
     "            background-attachment: fixed;\n",
     "            font-family: 'Segoe UI', sans-serif;\n",
     "        }\n",
-    "\n",
     "        .container {\n",
     "            text-align: center;\n",
-    "            padding: 50px;\n",
     "            background-color: rgb(239, 158, 208);\n",
     "            border-radius: 10px;\n",
     "            margin: 50px auto;\n",
@@ -174,11 +175,30 @@
     "</body>\n",
     "</html>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
