--- a/_notebooks/2023-10-12-passionproject-graphs.ipynb
+++ b/_notebooks/2023-10-12-passionproject-graphs.ipynb
@@ -21,6 +21,21 @@
    "source": [
     "{% include passionproj.html %}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "HTML('<iframe src=\"includes/instrument_chart.html\" width=\"600\" height=\"350\"></iframe>')"
+   ]
   }
  ],
  "metadata": {
