instrument tracker graphs

--- a/_notebooks/2023-10-12-passionproject-graphs.ipynb
+++ b/_notebooks/2023-10-12-passionproject-graphs.ipynb
@@ -10,7 +10,7 @@
     "description: Visual representation of survey data\n",
     "courses: { compsci: {week: 8} }\n",
     "type: tangibles\n",
-    "permalink: /passionproject/input-data\n",
+    "permalink: /passionproject/graphs\n",
     "comments: true\n",
     "---"
    ]
