--- a/_notebooks/2023-10-12-passionproject-graphs.ipynb
+++ b/_notebooks/2023-10-12-passionproject-graphs.ipynb
@@ -16,7 +16,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "{% include passionproj.html %}"
@@ -24,23 +24,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "html"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"instrument_chart.html\" width=\"600\" height=\"350\"></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import HTML\n",
     "\n",
-    "HTML('<iframe src=\"includes/instrument_chart.html\" width=\"600\" height=\"350\"></iframe>')"
+    "HTML('<iframe src=\"instrument_chart.html\" width=\"600\" height=\"350\"></iframe>')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
